@@ -9,8 +9,7 @@
 #ifndef SYCONFIG_H
 #define SYCONFIG_H
 
-#define SWITCHYARD_VERSION "0.7.0"
-
+#define SWITCHYARD_LWRP_VERSION "1.1"
 #define SWITCHYARD_ADVERTS_ADDRESS "239.192.255.3"
 #define SWITCHYARD_ADVERTS_PORT 4001
 #define SWITCHYARD_CLOCK_ADDRESS "239.192.255.2"
